# apex-otf2

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  OPEN_ISSUES  THANKS  aclocal.m4  configure  configure.ac
build-backend/: Makefile.in  aclocal.m4  configure  configure.ac
build-config/: VERSION
build-frontend/: Makefile.in  aclocal.m4  configure  configure.ac
build-includes/: common.m4  frontend-only.am
doc/: Makefile.inc.am
doc/doxygen-user/: definitions.dox  doxygen-user.cfg.in  events.dox  main.dox.in  otf2_config_usage.dox.in  otf2_estimator_usage.dox.in  otf2_print_usage.dox.in  snaps.dox
doc/examples/: Makefile.inc.am
include/otf2/: Makefile.inc.am  OTF2_Archive.h  OTF2_AttributeList.h  OTF2_AttributeValue.h  OTF2_Callbacks.h  OTF2_DefReaderCallbacks.h  OTF2_DefWriter.h  OTF2_Definitions.h  OTF2_ErrorCodes.h  OTF2_EventSizeEstimator.h  OTF2_Events.h  OTF2_EvtReaderCallbacks.h  OTF2_EvtWriter.h  OTF2_GeneralDefinitions.h  OTF2_GlobalDefReaderCallbacks.h  OTF2_GlobalDefWriter.h  OTF2_GlobalEvtReaderCallbacks.h  OTF2_GlobalSnapReaderCallbacks.h  OTF2_Reader.h  OTF2_SnapReaderCallbacks.h  OTF2_SnapWriter.h  OTF2_Thumbnail.h
share/otf2/: __init__.py  __version__.py  otf2.defs  otf2.enums  otf2.events  otf2.types
src/: Makefile.inc.am  OTF2_Archive.c  OTF2_AttributeList.c  OTF2_Buffer.c  OTF2_Buffer.h  OTF2_DefReader_inc.c  OTF2_DefWriter_inc.c  OTF2_EventSizeEstimator.c  OTF2_EvtReader_inc.c  OTF2_EvtWriter_inc.c  OTF2_GlobalDefReader_inc.c  OTF2_GlobalDefWriter_inc.c  OTF2_GlobalEvtReader_inc.c  OTF2_GlobalSnapReader_inc.c  OTF2_IdMap.c  OTF2_Reader.c  OTF2_SnapReader_inc.c  OTF2_SnapWriter_inc.c  config-backend-for-frontend.h.in  config-backend.h.in  config-frontend.h.in  otf2_archive_int.c  otf2_attic_types.h  otf2_attribute_list_inc.c  otf2_attribute_value.h  otf2_attribute_value_inc.c  otf2_collectives.c  otf2_events_int.h  otf2_file_posix.c  otf2_file_substrate_sion.c  otf2_file_substrate_sion_rank_map.c  otf2_global_definitions.h  otf2_id_map.c  otf2_id_map.h  otf2_local_definitions.h  otf2_lock.h  otf2_marker_int.h  otf2_reader.h  otf2_snaps.h
src/tools/otf2_config/: Makefile.backend-only.inc.am  Makefile.inc.am  otf2_config.cpp  otf2_config_data.cpp  otf2_config_data.hpp  otf2_config_data_backend.cpp  otf2_config_data_build.cpp.in
src/tools/otf2_estimator/: otf2_estimator_inc.cpp
src/tools/otf2_marker/: otf2_marker.cpp
src/tools/otf2_print/: otf2_print.c  otf2_print_inc.c  otf2_print_types.h
src/tools/otf2_snapshots/: otf2_snapshots_callbacks_inc.cpp  otf2_snapshots_events.hpp  otf2_snapshots_events_inc.cpp
src/tools/otf2_template/: otf2-template  otf2_template.py
src/tools/otf2_trace_gen/: otf2_trace_gen.c
templates/: Makefile.inc.am  OTF2_AttributeList.tmpl.h.sig  OTF2_AttributeValue.tmpl.h.sig  OTF2_DefReaderCallbacks.tmpl.h.sig  OTF2_DefReader_inc.tmpl.c  OTF2_DefReader_inc.tmpl.c.sig  OTF2_DefWriter.tmpl.h.sig  OTF2_DefWriter_inc.tmpl.c  OTF2_DefWriter_inc.tmpl.c.sig  OTF2_Definitions.tmpl.h.sig  OTF2_EventSizeEstimator.tmpl.c  OTF2_EventSizeEstimator.tmpl.c.sig  OTF2_EventSizeEstimator.tmpl.h.sig  OTF2_Events.tmpl.h.sig  OTF2_EvtReaderCallbacks.tmpl.h.sig  OTF2_EvtReader_inc.tmpl.c.sig  OTF2_EvtWriter.tmpl.h.sig  OTF2_EvtWriter_inc.tmpl.c.sig  OTF2_GeneralDefinitions.tmpl.h  OTF2_GeneralDefinitions.tmpl.h.sig  OTF2_GlobalDefReaderCallbacks.tmpl.h.sig  OTF2_GlobalDefReader_inc.tmpl.c  OTF2_GlobalDefReader_inc.tmpl.c.sig  OTF2_GlobalDefWriter.tmpl.h.sig  OTF2_GlobalDefWriter_inc.tmpl.c  OTF2_GlobalDefWriter_inc.tmpl.c.sig  OTF2_GlobalEvtReaderCallbacks.tmpl.h.sig  OTF2_GlobalEvtReader_inc.tmpl.c.sig  OTF2_GlobalSnapReaderCallbacks.tmpl.h.sig  OTF2_GlobalSnapReader_inc.tmpl.c.sig  OTF2_SnapReaderCallbacks.tmpl.h.sig  OTF2_SnapReader_inc.tmpl.c.sig  OTF2_SnapWriter.tmpl.h.sig  OTF2_SnapWriter_inc.tmpl.c.sig  definitions.tmpl.dox  definitions.tmpl.dox.sig  events.tmpl.dox.sig  example.cc  example.tmpl.cc.sig  otf2_attic_types.tmpl.h.sig  (+19 more)
test/OTF2_AttributeList_test/: OTF2_AttributeList_test.c
test/OTF2_Old_Chunk_List_test/: OTF2_Old_Chunk_List_test.c
test/cti/: Makefile.inc.am  cti.c
test/misc/: otf2_undefineds.c  otf2_undefineds.cc
test/otf2-cti/: Makefile.inc.am
test/test-parallel/: Makefile.inc.am
